--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,7 +140,7 @@ services:
       # For example, if you want to have wekan on port 3001,
       # use 3001:8080 . Do not add any extra address etc here, that way it does not work.
       # remove port mapping if you use nginx reverse proxy, port 8080 is already exposed to wekan-tier network
-      - 19001:8080
+      - ${APP_PORT}:8080
     environment:
       - MONGO_URL=mongodb://${MONGODB_IP}:27017/wekan
       #---------------------------------------------------------------
